--- a/super_task1/mainwindow.ui
+++ b/super_task1/mainwindow.ui
@@ -14,7 +14,7 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="set">
     <property name="geometry">
      <rect>
       <x>205</x>
@@ -33,7 +33,7 @@ color:rgb(0, 0, 255);</string>
      <string>set</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_2">
+   <widget class="QPushButton" name="map">
     <property name="geometry">
      <rect>
       <x>205</x>
@@ -52,7 +52,7 @@ color:rgb(0, 0, 255);</string>
      <string>map</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_3">
+   <widget class="QPushButton" name="unordered_map">
     <property name="geometry">
      <rect>
       <x>205</x>
@@ -101,11 +101,31 @@ color:rgb(255, 255, 255);</string>
      <string>Choose a container</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButton_4">
+    <property name="geometry">
+     <rect>
+      <x>500</x>
+      <y>340</y>
+      <width>81</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);
+border-radius:7px;
+font: 700 20pt &quot;System&quot;;
+color:rgb(255, 0, 0)</string>
+    </property>
+    <property name="text">
+     <string>exit</string>
+    </property>
+   </widget>
    <zorder>graphicsView</zorder>
-   <zorder>pushButton</zorder>
-   <zorder>pushButton_2</zorder>
-   <zorder>pushButton_3</zorder>
+   <zorder>set</zorder>
+   <zorder>map</zorder>
+   <zorder>unordered_map</zorder>
    <zorder>label</zorder>
+   <zorder>pushButton_4</zorder>
   </widget>
  </widget>
  <resources/>
