--- a/super_task1/set.ui
+++ b/super_task1/set.ui
@@ -95,10 +95,10 @@ color:rgb(0, 0, 255);</string>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>150</y>
+      <x>400</x>
+      <y>90</y>
       <width>71</width>
-      <height>41</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -112,10 +112,10 @@ color:rgb(255, 255, 255)</string>
    <widget class="QSpinBox" name="spinBox_set">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>150</y>
+      <x>490</x>
+      <y>90</y>
       <width>71</width>
-      <height>41</height>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -123,6 +123,26 @@ color:rgb(255, 255, 255)</string>
 background-color: rgb(255, 255, 255);
 font: 700 20pt &quot;System&quot;;
 color: rgb(0, 0, 255)</string>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="MainSet">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>210</y>
+      <width>281</width>
+      <height>200</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="InfoSet">
+    <property name="geometry">
+     <rect>
+      <x>420</x>
+      <y>210</y>
+      <width>171</width>
+      <height>201</height>
+     </rect>
     </property>
    </widget>
   </widget>
